agregando css/sass

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d8ae4155fd.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./public/styles/main.css">
+    <link rel="stylesheet" href="./public/css/main.css">
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Esensse</title>
 </head>
@@ -39,8 +39,7 @@
           </div>
         </nav>
       </header>
-    <main>
-      
+    <main>    
         <section class="contenedor banner">
             <img id="imgBner" class="banner__img" src="">
             <div id="textoBner"class="banner__info">
@@ -49,6 +48,42 @@
                 <p class="banner__p"></p>
             </div>
         </section>
+        <div>
+            <h2>Productos Nuevos</h2>
+        </div>
+        <section class="contA contAms">
+
+            <div class="flip">
+                <div class="front" style="background-image: url(multi/herramientas/cargadorx.png)">
+                    <h3 class="text-shadow">CARGADOR N16</h3>
+                </div>
+                <div class="back">
+                    <h3>Oferta</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae animi ips</p>
+                </div>
+            </div>
+
+            <div class="flip">
+                <div class="front" style="background-image: url(multi/herramientas/protectoresx.png)">
+                    <h3 class="text-shadow">PROTECTOR</h3>
+                </div>
+                <div class="back">
+                    <h3>Modelos Varios</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae animi ips</p>
+                </div>
+            </div>
+
+            <div class="flip">
+                <div class="front" style="background-image: url(multi/swft.png)">
+                    <h3 class="text-shadow">SMART WATCH</h3>
+                </div>
+                <div class="back">
+                    <h3>Ultimos!!</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae animi ips</p>
+                </div>
+            </div>
+        </section>
+
 
     </main>
     <div class="modal-contenedor">
